--- a/styles/light.css
+++ b/styles/light.css
@@ -9,7 +9,7 @@
     --hueHighlight: 140;
 
     --appBackgroundLightestHSL: var(--hueTheme), 40%, 50%;
-    --appBackgroundLighterHSL: var(--hueTheme), 20%, 71%;
+    --appBackgroundLighterHSL: var(--hueTheme), 40%, 71%;
     --appBackgroundHSL: var(--hueTheme), 100%, 83%;
     --appBackgroundDarkHSL: var(--hueTheme), 100%, 92%;
     --appBackgroundDarkestHSL: var(--hueTheme), 100%, 97%;
@@ -48,6 +48,13 @@ modal controls button.secondary {
     color: hsl(var(--appBackgroundHSL));
 }
 
+button.small {
+    background: hsla(var(--appBackgroundDarkestHSL), .7);
+}
+
+button.small, leftright, checkbox {
+    border: 1px solid hsla(var(--appBackgroundLighterHSL), 1);
+}
 
 button badge {
     color: hsl(var(--appBackgroundDarkestHSL));
@@ -68,7 +75,7 @@ notification {
 }
 
 notification.meta {
-    background-image: linear-gradient(hsla(var(--appBackgroundDarkHSL), 1), hsla(var(--appBackgroundDarkHSL), .0) 50%), var(--textureHueSource), var(--textureSource);
+    background-image: linear-gradient(hsla(var(--appBackgroundDarkHSL), 1), hsla(var(--appBackgroundDarkHSL), 0) 200px), var(--textureHue), var(--texture2);
 }
 
 notification message {
