--- a/styles/main.css
+++ b/styles/main.css
@@ -886,6 +886,10 @@ modal section message {
     margin-top: 0;
 }
 
+modal credit {
+    text-align: center;
+}
+
 message.clickable {
     cursor: pointer;
 }
